# QtQMLModel

./: .gitignore  .qmake.conf  CMakeLists.txt  LICENSE  QQmlModels.pro  QQmlObjectListModel.h  QtQMLModel.pri  QtQMLModel.pro  QtQmlModels.pri  QtQmlModels.pro  build_windows.bat  dllimportexport.h  qmldir  qpm.json  ro_wesell_QtQMLModel.qrc  sync.profile
include/QQmlModels/: QQmlModels  QQmlModelsDepends  QQmlModelsVersion  QQmlSmartListWrapper  dllimportexport.h  headers.pri  qqmlautopropertyhelpers.h  qqmlconstrefpropertyhelpers.h  qqmlenumclasshelper.h  qqmlhelperscommon.h  qqmllistpropertyhelper.h  qqmlmodelsversion.h  qqmlptrpropertyhelpers.h  qqmlvariantlistmodel.h  qqmlvarpropertyhelpers.h
lib/: QQmlModels.prl  QQmlModelsd.prl  libQQmlModels.la
lib/cmake/Qt5QQmlModels/: Qt5QQmlModelsConfig.cmake
lib/pkgconfig/: QQmlModels.pc
mac/: mac.pri  osx.pri
mkspecs/modules/: qt_lib_QQMLModels.pri
mkspecs/modules-inst/: qt_lib_QQMLModels.pri  qt_lib_QQMLModels_private.pri
src/: CPPQmlModels  qqmlmodels_global.h  qqmlobjectlistmodel.h  qqmlobjectlistmodelbase.cpp  qqmlobjectlistmodelbase.h  qqmlobjectsortfilterlistmodel.h  qqmlvariantlistmodel.cpp  qqmlvariantlistmodel.h  src.pro
src/QQMLModels/: QQMLModels.pro  QQmlModels.pro  QQmlModels_resource.rc  QQmlModelsd_resource.rc  QQmlObjectListModel.h  QQmlVariantListModel.h  QtQmlModels.pri  dllimportexport.h
src/QQMLModels/QtSuperMacros/: QQmlAutoPropertyHelpers.h  QQmlConstRefPropertyHelpers.h  QQmlHelpers.cpp  QQmlPtrPropertyHelpers.h  QQmlVarPropertyHelpers.h  QtSuperMacros.pri
src/QQmlModels/: QQmlModels.version
src/QmlModels/: QmlModels.pro  qqmlobjectlistmodel.h  qqmlvariantlistmodel.cpp  qqmlvariantlistmodel.h
src/QmlModels/QtSuperMacros/: qqmlconstrefpropertyhelpers.h  qqmlptrpropertyhelpers.h
src/QmlModels/mac/: mac.pri
src/QtSuperMacros/: qqmlautopropertyhelpers.h  qqmllistpropertyhelper.h  qqmlvarpropertyhelpers.h  qtsupermacros.pro
src/qmlmodels/: qmlmodels.pro  qqmlmodels.pri  qqmlobjectlistmodel.h  qqmlobjectsortfilterlistmodel.h
src/qmlmodels/QtSuperMacros/: qqmlvarpropertyhelpers.h
src/qmlmodels/qtsupermacros/: qqmllistpropertyhelper.h
src/qqmlmodels/: make_ios.sh  qqmlmodels.pri  qqmlmodels.pro  qqmlmodels_global.h  qqmlobjectsortfilterlistmodel.cpp
src/qqmlmodels/mac/: ios.pri
tests/auto/DLLExportImportTest/: CMakeLists.txt  tst_dllimportexport.cpp
tests/auto/cmake/: README.md
